Add support for default, moar specs
- add support for defining defaults for columns
- add moar specs (specifically for dumping/loading schema)

--- a/spec/internal/config/database.yml
+++ b/spec/internal/config/database.yml
@@ -2,3 +2,7 @@ test:
   adapter: postgresql
   encoding: unicode
   database: apa_test
+  username: springest
+  password: ''
+  port: 5432
+  host: localhost
